1998-04-12  Raja R Harinath  <harinath@cs.umn.edu>

	* Makefile.am (supportincludedir): Is now $(pkglibdir)/include.
	`gnomesupport.h' is a generated file dependent on the configure
	process.  So, this seems a good place.  The rest of the headers
	are also here just because I'm too lazy to maintain two separate
	include directories to search in for `libgnomesupport' stuff ;-)
	(supportinclude_DATA): New var.  Has `gnomesupport.h'.
	(BUILT_SOURCES): Generate `gnomesupport.h'.

	* gnomesupport-h.c: New file.  Used to generate `gnomesupport.h',
	which contains prototypes for many of the functions in
	`libgnomesupport'.  This method is used to ensure that prototypes
	appear only for those functions that are provided by
	`libgnomesupport'. 

	* scandir.c (alphasort): New utility function.

1998-04-08  Raja R Harinath  <harinath@cs.umn.edu>

	* scandir.c: Import from GNU libc.
	Remove assumptions that this file is compiled inside GLIBC.
	Here are the ChangeLog entries when I imported it originally into
	`gwp':

	1998-02-08  Raja R Harinath  <harinath@cs.umn.edu>
        	* scandir.c (scandir): Revert change of `1998-02-07'.  
		Don't use d_reclen, but fix the expression used to
		figure out the length.

	1998-02-07  Raja R Harinath  <harinath@cs.umn.edu>
	        * scandir.c (scandir): Use `d_reclen' field to get length
		of record.

	1998-02-06  Raja R Harinath  <harinath@cs.umn.edu>
	        * scandir.c: New file.  Replacement function copied from
		glibc, edited to not step on implementation namespace.

1998-03-28  Raja R Harinath  <harinath@cs.umn.edu>

	* vasprintf.c (int_vasprintf): Imported from GNU libit-0.4.
	Applied a change that appears in `libiberty'.

Fri Mar 13 21:30:34 1998  Tom Tromey  <tromey@cygnus.com>

	* argp.texi: Imported from glibc.
	* Makefile.am (EXTRA_DIST): Added argp.texi.

1998-03-12  Raja R Harinath  <harinath@cs.umn.edu>

	* Makefile.am (noinst_HEADERS): Don't install argp-fmtstream.h and